...
    monthNamesShort: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec'],
    dayNames: ['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday'],
    dayNamesShort: ['Su', 'Mo', 'Tu', 'We', 'Th', 'Fr', 'Sa'],
    today: 'today',
  },
  bookings: {
    myReservationsTitle: 'My reservations',
    pastTripsTitle: 'Past trips',
    switchToPast: 'Past trips',
    switchToCurrent: 'Reservations',
    emptyMessage: "Oops, it looks like there is nothing to see here.",
    dates: 'Dates',
    arrival: 'Arrival',
    departure: 'Departure',
...
