const es = {
  header: {
    login: 'Login',
    myBookings: 'Mis reservas',
    selectCountry: 'Seleccionar país',
    countries: {
      co: 'Colombia',
      ar: 'Argentina',
      us: 'Estados Unidos',
    },
...
